# openshard

./: .gitignore  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  calculator.py  config.yml  pyproject.toml  requirements.txt  test_calculator.py
.github/workflows/: ci.yml
.openshard/: runs.jsonl
docs/: deepagents-langgraph-boundary.md  demo-pack.md  demo-script-3min.md  demo-script-60s.md  demo-smoke-checklist.md  install.md  release-checklist.md  what-is-a-shard.md
examples/: README.md  complex-multi-stage.md  demo-tasks.json  security-sensitive-auth.md  simple-refactor.md
examples/production-infra-demo/: README.md  database.tf  demo-task.md  iam.tf  main.tf  monitoring.tf  network.tf  outputs.tf  secrets.tf  services.tf  storage.tf  terraform.tfvars.example  variables.tf
notes/: openshard-native-agent-loop-v1.review.md
openshard/: __init__.py
openshard/adapters/: claude_code_import.py  wrap_exec.py
openshard/analysis/: repo.py  repo_map.py  repo_map_cache.py  repo_map_loader.py
openshard/ci/: __init__.py  policy_check.py
openshard/cli/: main.py  run_output.py
openshard/config/: default_config.yml  onboarding.py  settings.py
openshard/cost/: baseline.py
openshard/evals/: adjustments.py  case_builder.py  registry.py  runner.py  stats.py
openshard/execution/: gates.py  generator.py  opencode_adapter.py  opencode_executor.py  runner.py  stages.py
openshard/github/: pr_comment.py
openshard/history/: adjustments.py  completeness.py  failure_memory.py  failures.py  feedback.py  feedback_scoring.py  interactions.py  jsonl_store.py  memory.py  metrics.py  native_steps.py  proof_contract.py  proof_signals.py  provenance.py  routing_truth.py  run_checkpoints.py  sandbox_apply_receipts.py  session_events.py  session_signals.py  shard_contract.py  shard_hash.py  shard_quality.py  shard_schema.py  trust_score.py
openshard/models/: advisory.py  feedback_advisory.py  mode_policy.py  openrouter_fetcher.py  registry.py
openshard/native/: agent_loop_dry_run.py  agent_loop_receipts.py  agent_loop_tool_runner.py  agent_loop_types.py  agent_loop_write_gated.py  backends.py  context.py  dispatch.py  executor.py  loop.py  osn_loop_recorder.py  osn_observation.py  progress_memory.py  repo_context.py  retry_diagnosis.py  sandbox.py  sandbox_apply.py  sandbox_diff.py  skills.py  tool_runner.py  (+2 more)
tests/: conftest.py  test_action_blocks.py  test_adapters_claude_code_import.py  test_adapters_wrap_exec.py  test_advisory_ranking.py  test_agent_loop_dry_run.py  test_agent_loop_receipts.py  test_agent_loop_tool_runner.py  test_agent_loop_types.py  test_agent_loop_write_gated.py  test_agent_path.py  test_ask_mode.py  test_backend_execution_result.py  test_baseline_cost.py  test_builtin_packs_extended.py  test_cache.py  test_candidate_diff_apply.py  test_candidate_ranking.py  test_ci_policy_check.py  test_cli_ci_check.py  test_cli_config_show.py  test_cli_doctor.py  test_cli_import_claude.py  test_cli_init.py  test_cli_last_quality.py  test_cli_models.py  test_cli_native_loop.py  test_cli_note.py  test_cli_package.py  test_cli_packs_run.py  test_cli_proof_last.py  test_cli_repo_map.py  test_cli_repo_plan.py  test_cli_repo_summary.py  test_cli_roster.py  test_cli_stats_failures.py  test_cli_trust.py  test_cli_tui.py  test_cli_wrap_claude.py  test_config_settings.py  (+148 more)
(+103 files in other folders)
