[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openshard"
version = "0.1.0"
description = "Intelligent task routing and execution across model tiers"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
openshard = "openshard.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["openshard*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
