[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openshard"
version = "0.3.0"
description = "The control layer for AI coding agents."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Michael Obasa", email = "michaelobasa2@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.7",
    "textual>=0.70",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/MichaelObasa/openshard"
Repository = "https://github.com/MichaelObasa/openshard"
"Bug Tracker" = "https://github.com/MichaelObasa/openshard/issues"

[project.scripts]
openshard = "openshard.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["openshard*"]

[tool.setuptools.package-data]
"openshard.tui"    = ["*.tcss"]
"openshard.config" = ["*.yml"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = [
    "UP022",  # replace-stdout-stderr: requires semantic change
    "UP035",  # deprecated-import: deferred to separate cleanup
    "UP042",  # replace-str-enum: deferred to separate cleanup
]

[tool.pytest.ini_options]
testpaths = ["tests"]
